Fix : Sorting and Filtering overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,7 @@
 input[type="checkbox"] {
   margin: unset;
 }
+
+.grey-text {
+  color: var(--component-grey-03);
+}
