--- a/src/components/FilterSelector/FilterSelector.module.css
+++ b/src/components/FilterSelector/FilterSelector.module.css
@@ -21,7 +21,7 @@
   right: 0;
   width: fit-content;
   height: fit-content;
-  max-width: 18rem;
+  min-width: 18rem;
   background-color: var(--CARD_BG);
   border-radius: 8px;
   gap: 10px;
@@ -29,7 +29,7 @@
 }
 
 .showDropdown {
-  height: 26rem;
+  height: 30rem;
   padding: 0.5rem;
 }
 
@@ -65,6 +65,7 @@
   font-weight: bold;
   font-size: small;
   width: fit-content;
+  flex-wrap: nowrap;
   height: fit-content;
   border: 1px solid var(--component-grey-05);
 }
@@ -77,9 +78,7 @@
 .label_container {
   gap: 10px;
   width: 100%;
-  flex-wrap: nowrap;
   padding: 0.75rem 0.25rem;
-  overflow-x: scroll;
 }
 
 .color_container {
@@ -87,6 +86,7 @@
   width: 100%;
   padding: 1rem 0.25rem;
   justify-content: space-evenly;
+  flex-wrap: inherit;
 }
 
 .label_icon {
